--- a/html/index.html
+++ b/html/index.html
@@ -1,81 +1,51 @@
-<!DOCTYPE html>
-<html lang="es_es">
+
+<!doctype html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>ABS Consultor - Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Le styles -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/font-awesome/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/bootstrap/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/bootstrap/css/bootstrap-theme.min.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/owl-carousel/owl.carousel.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/owl-carousel/owl.theme.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/vendor/bxslider/jquery.bxslider.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/css/absconsultor.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/absconsultor/css/home.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/img/favicon.jpg" rel="shortcut icon" type="image/vnd.microsoft.icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>ABS Consultor</title>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700" rel="stylesheet">
+
+    <!-- Styles -->
     <style>
-        @media (max-width: 767px) {
-            .home .bx-wrapper {
-                padding-top: 0;
-            }
+        body {
+            background-color: #192d4e;
+            color: white;
+            font-family: "Source Sans Pro", Arial, sans-serif;
+        }
 
-            .abs .home .brand-logo {
-                width: 35%;
-            }
+        img {
+            margin-bottom: 20px;
+        }
 
-            #home_brand_logo, ul.home-navbar {
-                display: block;
-            }
+        body > div {
+            height: 300px;
+            width: 500px;
+            position: absolute;
+            left: 50%;
+            text-align: center;
+            transform: translate(-50%,80%);
+        }
 
-            .abs .home .nav.navbar-nav {
-                top: 60%;
-            }
-            .nav.navbar-nav a, footer .footer-nav a {
-                font-size: 18px;
+        body > div > img {
+            width: 100%;
+        }
+
+        @media screen and (max-width: 768px) {
+            body > div {
+                width: 75%;
             }
         }
     </style>
 </head>
-<body style="background-color: #23527c">
-
-<div class="container-fluid abs">
-
-    <div class="container-fluid home">
-        <div class="row">
-            <ul class="bxslider">
-                <li><div class='video-wrapper'>
-                    <video class='video' width='100%'>
-                        <source src='/media/video/grua.mp4' type='video/mp4'/>
-                    </video>
-                    <div class='video-filter'>
-                        <div class='video-controls'>
-                            <i class='fa fa-play'></i>
-                            <i class='fa fa-pause hide'></i>
-                        </div>
-                    </div>
-                </div></li>        </ul>
-
-            <img id="home_brand_logo" src="/img/white-logo.png" alt="Logo ABS Consultor" class="transition brand-logo"/>
-            <ul class="nav home-navbar navbar-nav transition" style="margin-left: -125px;">
-                <li><a href="mailto:absconsultor@absconsultor.es">Próximamente... / Coming soon...</a></li>
-            </ul>
-        </div>
-    </div>
-
-</div> <!-- /container -->
-
-<input type="hidden" id="simple-routing-manager" name="srmHomeController" value="indexAction" />
-<!-- Scripts -->
-<script type="text/javascript" src="/absconsultor/vendor/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/js-cookie/js-cookie.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/owl-carousel/owl.carousel.min.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/bxslider/plugins/jquery.fitvids.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/bxslider/plugins/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="/absconsultor/vendor/bxslider/jquery.bxslider.min.js"></script>
-<script type="text/javascript" src="/absconsultor/dist/dist.js"></script>            </body>
+<body>
+<div>
+    <img src="/img/white-logo.png" alt="Logo ABS Consultor" class="transition brand-logo"/>
+    <div>Estamos en mantenimiento, disculpa las molestias...</div>
+</div>
+</body>
 </html>
